/**
 *  This is the an administrator controller. The method in this class is for administrator to realize their function.
 *
 * @author    Yuwu
 * @version   20/10/2019
 */
public class AdminController {

public boolean deleteCustomer(int customerId)
{
    boolean result=false;

    //code here
    return result;
}
public void viewBookingHistory(String bookingHistory)
{

}
public void viewReviewOfHalls()
{

}
public boolean addDiscount(String discountName, double value, String comments)
{
    boolean result=false;

    //code here
    return result;
}

public boolean deleteDiscount(int discountId)
{
    boolean result=false;

    //code here
    return result;
}

public boolean editDiscount(int discountId, Double value)
{
    boolean result=false;

    //code here
    return result;
}

public void displayAdminDiscount( )
{

}
}
