/**
 * THis is the main method
 *
 * @author    Annu Shokeen, Zhijie Li,YuWu
 * @version   20/10/2019
 */

public class Main {

    public static void main(String[] args)
    {
        PEInterface peInterface = new PEInterface();
        peInterface.displayMainMenu();

    }
}
