@startuml

title __FIT5136 - SE's Class Diagram__\n

  namespace  {
    class AdminController {
    }
  }
  

  namespace  {
    class Administrator {
    }
  }
  

  namespace  {
    class AdministratorInterface {
    }
  }
  

  namespace  {
    class Booking {
    }
  }
  

  namespace  {
    class CommonController {
    }
  }
  

  namespace  {
    class Customer {
    }
  }
  

  namespace  {
    class CustomerController {
    }
  }
  

  namespace  {
    class CustomerInterface {
    }
  }
  

  namespace  {
    class Discount {
    }
  }
  

  namespace  {
    class FileIO {
    }
  }
  

  namespace  {
    class Hall {
    }
  }
  

  namespace  {
    class InputValidation {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class Owner {
    }
  }
  

  namespace  {
    class OwnerController {
    }
  }
  

  namespace  {
    class OwnerInterface {
    }
  }
  

  namespace  {
    class PEInterface {
    }
  }
  

  namespace  {
    class PrimeEvents {
    }
  }
  

  namespace  {
    class Quotation {
    }
  }
  

  namespace  {
    class Receipt {
    }
  }
  

  namespace  {
    class Review {
    }
  }
  

  namespace  {
    class User {
    }
  }
  

  Administrator -up-|> User
  AdministratorInterface o-- CommonController : commonController
  AdministratorInterface o-- InputValidation : validator
  Booking o-- Hall : hall
  CommonController o-- FileIO : io
  CommonController o-- InputValidation : validator
  Customer -up-|> User
  Customer o-- Booking : booking
  CustomerController o-- Booking : booking
  CustomerController o-- Customer : customer
  CustomerController o-- Hall : hall
  CustomerController o-- PrimeEvents : primeEvents
  CustomerInterface o-- CommonController : commonController
  CustomerInterface o-- CustomerController : customerController
  CustomerInterface o-- InputValidation : validator
  Owner -up-|> User
  Owner o-- FileIO : fileIO
  OwnerController o-- CommonController : commonController
  OwnerController o-- InputValidation : input
  OwnerController o-- FileIO : io
  OwnerController o-- Owner : owner
  OwnerInterface o-- CommonController : commonController
  OwnerInterface o-- OwnerController : ownerController
  OwnerInterface o-- InputValidation : validator
  PEInterface o-- AdministratorInterface : administratorInterface
  PEInterface o-- CommonController : commonController
  PEInterface o-- CustomerInterface : customerInterface
  PEInterface o-- OwnerInterface : ownerInterface
  PEInterface o-- InputValidation : validator
  PrimeEvents o-- InputValidation : input


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
